# training-data-extractor

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  INSTRUCTIONS.md  README.md  SCHEMA.md  config.example.yaml  convert_fps.py  docker-compose.yml  inputs  migrate_sqlite_to_pg.py  oc.sh  prefill_thumbnail_cache.py  pyproject.toml  requirements.txt  restart.sh  run_autotag.py  run_captions_loop.sh  setup.py  test.sh  view_captions.py  web_review.py
ltx2_dataset_builder/: __init__.py  cli.py  config.py
ltx2_dataset_builder/autotag/: face_tag.py
ltx2_dataset_builder/buckets/: __init__.py  detect.py
ltx2_dataset_builder/candidates/: __init__.py  generate.py
ltx2_dataset_builder/captions/: __init__.py  generate.py
ltx2_dataset_builder/cluster/: faces.py
ltx2_dataset_builder/comfy/: node_timing.py  queue_poll.py
ltx2_dataset_builder/crops/: __init__.py  generate.py
ltx2_dataset_builder/embed/: clip_embed.py
ltx2_dataset_builder/faces/: __init__.py  detect.py  embed.py  scan.py  smooth.py
ltx2_dataset_builder/ingestion/: __init__.py  index_videos.py
ltx2_dataset_builder/manifest/: __init__.py  writer.py
ltx2_dataset_builder/outputs/: backfill_hashes.py  scan.py
ltx2_dataset_builder/quality/: __init__.py  score.py
ltx2_dataset_builder/render/: __init__.py  bucket.py
ltx2_dataset_builder/scenes/: __init__.py  blurhash.py  detect.py
ltx2_dataset_builder/subtitles/: extract.py
ltx2_dataset_builder/utils/: __init__.py  debug.py  ffmpeg.py  hashing.py  io.py  precache.py  preview.py
schema/: schema.sql
scripts/: backup_pg.sh  get_version.py
tests/: test_captions_generate.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  (+2 more)
(+30 files in other folders)
