[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ltx2-dataset-builder"
version = "0.2.0"
description = "Automated training data extraction for LTX-2 character LoRA training"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "scenedetect[opencv]>=0.6.2",
    "opencv-python>=4.8.0",
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.16.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "PyYAML>=6.0",
    "tqdm>=4.66.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
cpu = [
    "onnxruntime>=1.16.0",
]

[project.scripts]
ltx2-build = "ltx2_dataset_builder.cli:main"

[tool.setuptools.packages.find]
include = ["ltx2_dataset_builder*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
